--- a/dashboard/views/en/mobile-nav.html
+++ b/dashboard/views/en/mobile-nav.html
@@ -30,6 +30,6 @@
     </div>
 
     <!-- Language -->
-    <a href="#" id="language-selector" class="language-selector polish" data-change-lang="true" data-lang="pl">Polska wersja<i class="fa fa-angle-right"></i></a>
+    <a href="#" class="dropdown-toggle left-header-btn">Logout<i class="fa fa-angle-right"></i></a>
 
 </div>
