--- a/dashboard/views/en/header.html
+++ b/dashboard/views/en/header.html
@@ -2,32 +2,36 @@
 
     <!-- Logo -->
     <a href="home" data-change-view="true" class="logo"></a>
+    <a href="home" data-change-view="true"><span class="logo-text">Dashboard</span></a>
 
     <!-- Navigation -->
     <nav id="main-nav">
         <ul class="nav nav-horizontal nav-main">
-            <li><a href="services" data-change-view="true">Services</a></li>
-            <li><a href="portfolio" data-change-view="true">Portfolio</a></li>
-            <li><a href="signin" data-change-view="true">Sign In</a></li>
+            <!-- <li><a href="portfolio" data-change-view="true">Portfolio</a></li> -->
+            <li><a href="services" data-change-view="true">Apps</a></li>
+            <!-- <li><a href="signin" data-change-view="true">Sign In</a></li> -->
             <li><a href="contact" data-change-view="true">Contact &amp; Support</a></li>
-            <li><a href="http://subely.com/user/Subely/portfolio?ref=Subely" target="_blank" class="external">DevDuo</a></li>
+            <!-- <li><a href="http://subely.com/user/Subely/portfolio?ref=Subely" target="_blank" class="external">DevDuo</a></li> -->
         </ul>
         <span id="nav-selector" class="bg-primary"></span>
     </nav>
-
-    <!-- Language -->
-    <!-- <a href="#" id="language-selector" class="language-selector polish" data-change-lang="true" data-lang="pl">Polska wersja<i class="fa fa-angle-right"></i></a> -->
 
     <!-- Login -->
     <style media="screen">
       .left-header-btn:before{margin: -5px;}
     </style>
-    <a href="dbxlogin" class="left-header-btn" data-change-view="true"> <!-- <i class="fa fa-lock"></i> --> Login<i class="fa fa-angle-right"></i></a>
-    <!-- <li><a href="login" class="left-header-btn"data-change-view="true">Services</a></li> -->
 
-    <!-- Text -->
-    <div class="typing">
-        <span id="typing-text" class="typing-text"></span>
+
+    <div class="dropdown right-header">
+      <a href="" class="dropdown-toggle left-header-btn" aria-haspopup="true" aria-expanded="true" data-toggle="dropdown">Seth Horsley<i class="fa fa-angle-right"></i></a>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+        <span class="triangle"></span>
+        <li><a href="#">Profile <i class="fa fa-user" aria-hidden="true"></i></a></li>
+        <li><a href="#">Billing <i class="fa fa-credit-card" aria-hidden="true"></i></a></li>
+        <li><a href="#">Settings <i class="fa fa-cogs" aria-hidden="true"></i></a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#" id="logout">Logout <i class="fa fa-lock"></i></a></li>
+      </ul>
     </div>
 
     <!-- Mobile Title -->
