--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -47,103 +47,128 @@
 
         <div class="section-wrapper">
 
-            <div class="" style="position: relative;position: relative;
-padding-bottom: 160px;
-padding-top: 100px;
-height: 100vh;">
-
-                <div class="home-middle v-center" style="z-index: 10;">
-
-                  <div id="subs" class="vertical-center">
-                    <div class="col-md-10 col-md-offset-1">
-                      <div class="input-group">
-                          <input id="filter" type="text" class="form-control" placeholder="Type here...">
-                      </div>
-                      <table class="table card">
-                          <thead>
-                              <tr>
-                                  <th class="col-md-4">Host</th>
-                                  <th class="col-md-1">Status</th>
-                                  <th class="col-md-2">Created</th>
-                              </tr>
-                          </thead>
-                          <tbody class="searchable">
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>Lets get to work!</td>
-                                  <td class=""><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>1 minute ago</td>
-                                  <td class=""><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>8 months ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>10 months ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <!-- <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>2 years ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>2 years ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>2 years ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>2 years ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr> -->
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>2 years ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>2 years ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                              <tr class="cell">
-                                  <td><a href="#">www.example.com</a></td>
-                                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                                  <td>2 years ago</td>
-                                  <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                              </tr>
-                          </tbody>
-                      </table>
-
+            <div class="subs-wrapper" >
+                <div id="subs" class="vertical-center">
+                  <div class="col-md-10 col-md-offset-1 subs-header">
+                    <div class="input-group subs-header-search">
+                        <input id="filter" type="text" class="form-control" placeholder="Type here...">
                     </div>
+                    <div class="subs-header-options">
+                      <ul>
+                        <li>button</li>
+                        <li>button</li>
+                      </ul>
+                    </div>
+                  <table class="table card">
+                      <thead>
+                          <tr>
+                              <th class="col-md-4">Host</th>
+                              <th class="col-md-1">Status</th>
+                              <th class="col-md-2">Created</th>
+                          </tr>
+                      </thead>
+                      <tbody class="searchable">
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>Lets get to work!</td>
+                              <td class=""><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>1 minute ago</td>
+                              <td class=""><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>8 months ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>10 months ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+
+
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+
+
+
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                          <tr class="cell">
+                              <td><a href="#">www.example.com</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>2 years ago</td>
+                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                          </tr>
+                      </tbody>
+                    </table>
                   </div>
                 </div>
-                <!-- Bottom -->
+                <!-- Botton
                 <div class="home-bottom container">
-
-                    <!-- Buttons -->
                     <div class="home-buttons row">
                         <div class="col-lg-3 col-lg-push-3 col-md-4 col-md-push-2 col-sm-6" style=" position: fixed; z-index: 9;">
                             <a href="services" data-change-view="true" class="btn btn-block btn-home btn-home-main ffixed"><span>View <strong>Services</strong></span><i class="ti-arrow-right"></i></a>
@@ -152,7 +177,7 @@ height: 100vh;">
                             <a href="portfolio" data-change-view="true" class="btn btn-block btn-home btn-link"><span>Browse <strong>Porftolio</strong></span><i class="ti-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
             </div>
 
