--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -5,8 +5,8 @@
 <!-- Meta -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<meta name="description" content="Hi! My name is Piotr Osmola. I offer professional graphic desgin and front-end webdeveloper.">
-<meta name="keywords" content="Subely, webdesign, front-end development, webdevelopment, app design, corporate identity, branding.">
+<meta name="description" content="Subely -- Web hosting solution">
+<meta name="keywords" content="Subely, sub, subs, sub hosting, dropbox hosting, dropbox web hosting, webhosting, free webhosting, free hosting, alternative">
 <meta name="author" content="Subely">
 
 <!-- Title -->
@@ -53,116 +53,86 @@
                     <div class="input-group subs-header-search">
                         <input id="filter" type="text" class="form-control" placeholder="Type here...">
                     </div>
-                    <div class="subs-header-options">
+                    <!-- <div class="subs-header-options">
                       <ul>
                         <li>button</li>
                         <li>button</li>
                       </ul>
-                    </div>
+                    </div> -->
                   <table class="table card">
                       <thead>
                           <tr>
-                              <th class="col-md-4">Host</th>
+                              <th class="col-sm-2">Host</th>
                               <th class="col-md-1">Status</th>
-                              <th class="col-md-2">Created</th>
+                              <th class="col-md-2">Path</th>
+                              <th class="col-md-1">Created</th>
+                              <th class="col-md-3">Tag</th>
                           </tr>
                       </thead>
                       <tbody class="searchable">
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
+                          <tr class="">
+                              <td><a href="#">www.isethi.com</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.isethi.com</td>
                               <td>Lets get to work!</td>
-                              <td class=""><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
                           </tr>
-                          <tr class="cell">
+                          <tr class="">
                               <td><a href="#">www.example.com</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.example.com</td>
                               <td>1 minute ago</td>
-                              <td class=""><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
                           </tr>
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
                               <td>8 months ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
                           </tr>
-                          <tr class="cell">
+                          <!-- <tr class="">
                               <td><a href="#">www.example.com</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
                               <td>10 months ago</td>
                               <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
                           </tr>
-                          <tr class="cell">
+                          <tr class="">
                               <td><a href="#">www.example.com</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
                               <td>2 years ago</td>
                               <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
                           </tr>
-                          <tr class="cell">
+                          <tr class="">
                               <td><a href="#">www.example.com</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
                               <td>2 years ago</td>
                               <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
                           </tr>
-                          <tr class="cell">
+                          <tr class="">
                               <td><a href="#">www.example.com</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
                               <td>2 years ago</td>
                               <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
                           </tr>
-                          <tr class="cell">
+                          <tr class="">
                               <td><a href="#">www.example.com</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
                               <td>2 years ago</td>
                               <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
-
-
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
-
-
-
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
-                          <tr class="cell">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr>
+                          </tr> -->
                       </tbody>
                     </table>
                   </div>
