--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -50,7 +50,11 @@
             <div class="subs-wrapper" >
                 <div id="subs" class="vertical-center">
                   <div class="col-md-10 col-md-offset-1 subs-header">
-                    <div class="input-group subs-header-search">
+                    <div class="subs--top--right">
+                      <a href="" class="no-animate btn btn-xs btn-default" id="toggle-sub-view" style="color: black;"><i class="fa fa-th" aria-hidden="true"></i></a>
+                      <a data-change-view="false" class="btn btn-home-main"><span>Add <strong>Site</strong></span><i class="ti-plus"></i></a>
+                    </div>
+                    <div class="subs--top--left">
                         <input id="filter" type="text" class="form-control" placeholder="Type here...">
                     </div>
                     <!-- <div class="subs-header-options">
@@ -134,6 +138,7 @@
                               <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
                           </tr> -->
                       </tbody>
+                      <p id="noResults">no results</p>
                     </table>
                   </div>
                 </div>
