--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -51,7 +51,7 @@
                 <div id="subs" class="vertical-center">
                   <div class="col-md-10 col-md-offset-1 subs-header">
                     <div class="subs--top--right">
-                      <a href="" class="no-animate btn btn-xs btn-default" id="toggle-sub-view" style="color: black;"><i class="fa fa-th" aria-hidden="true"></i></a>
+                      <!-- <a href="" class="no-animate btn btn-xs btn-default" id="toggle-sub-view" style="color: black;"><i class="fa fa-th" aria-hidden="true"></i></a> -->
                       <a data-change-view="false" class="btn btn-home-main"><span>Add <strong>Site</strong></span><i class="ti-plus"></i></a>
                     </div>
                     <div class="subs--top--left">
@@ -107,36 +107,138 @@
                                 </div>
                               </td>
                           </tr>
-                          <!-- <tr class="">
-                              <td><a href="#">www.example.com</a></td>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>10 months ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
                           </tr>
                           <tr class="">
-                              <td><a href="#">www.example.com</a></td>
+                              <td><a href="#">www.devduo.net</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
                           </tr>
                           <tr class="">
-                              <td><a href="#">www.example.com</a></td>
+                              <td><a href="#">www.devduo.net</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
                           </tr>
                           <tr class="">
-                              <td><a href="#">www.example.com</a></td>
+                              <td><a href="#">www.devduo.net</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
                           </tr>
                           <tr class="">
-                              <td><a href="#">www.example.com</a></td>
+                              <td><a href="#">www.devduo.net</a></td>
                               <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>2 years ago</td>
-                              <td><button type="button" class="btn btn-xs btn-danger fright">Delete</button></td>
-                          </tr> -->
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
+                          <tr class="">
+                              <td><a href="#">www.devduo.net</a></td>
+                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                              <td>[dropbox]/apps/subely/www.devduo.net</td>
+                              <td>8 months ago</td>
+                              <td>
+                                <div class="fright">
+                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
+                                </div>
+                              </td>
+                          </tr>
                       </tbody>
                       <p id="noResults">no results</p>
                     </table>
