--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -52,7 +52,7 @@
                   <div class="col-md-10 col-md-offset-1 subs-header">
                     <div class="subs--top--right">
                       <!-- <a href="" class="no-animate btn btn-xs btn-default" id="toggle-sub-view" style="color: black;"><i class="fa fa-th" aria-hidden="true"></i></a> -->
-                      <a data-change-view="false" class="btn btn-home-main"><span>Add <strong>Site</strong></span><i class="ti-plus"></i></a>
+                      <a data-change-view="false" data-toggle="modal" data-target="#myModal" class="btn btn-home-main"><span>Add <strong>Site</strong></span><i class="ti-plus"></i></a>
                     </div>
                     <div class="subs--top--left">
                         <input id="filter" type="text" class="form-control" placeholder="Type here...">
@@ -66,179 +66,13 @@
                   <table class="table card">
                       <thead>
                           <tr>
-                              <th class="col-sm-2">Host</th>
+                              <th class="col-sm-4">Host</th>
                               <th class="col-md-1">Status</th>
-                              <th class="col-md-2">Path</th>
-                              <th class="col-md-1">Created</th>
-                              <th class="col-md-3">Tag</th>
+                              <th class="col-md-3">Path</th>
+                              <th class="col-md-2">Created</th>
                           </tr>
                       </thead>
-                      <tbody class="searchable">
-                          <tr class="">
-                              <td><a href="#">www.isethi.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.isethi.com</td>
-                              <td>Lets get to work!</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.example.com</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.example.com</td>
-                              <td>1 minute ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
-                          <tr class="">
-                              <td><a href="#">www.devduo.net</a></td>
-                              <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                              <td>[dropbox]/apps/subely/www.devduo.net</td>
-                              <td>8 months ago</td>
-                              <td>
-                                <div class="fright">
-                                  <button type="button" class="btn btn-xs btn-danger">Delete</button>
-                                </div>
-                              </td>
-                          </tr>
+                      <tbody id="subs-table" class="searchable">
                       </tbody>
                       <p id="noResults">no results</p>
                     </table>
@@ -258,6 +92,33 @@
 
             </div>
 
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add Site</h4>
+              </div>
+              <h6 class="title col-md-8 col-md-offset-2">Subely Domain</h6>
+              <div class="modal-body">
+                <div class="col-md-8 col-md-offset-2 input-group">
+                  <input autocomplete="off" id="add-site" type="text" class="form-control" placeholder="Sub-domain" aria-describedby="basic-addon2">
+                  <span class="input-group-addon" id="basic-addon2">.subely.me</span>
+                </div>
+                <div class="site-add-message">Enter a sub domain</div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default add-site">Check</button>
+              </div>
+            </div>
+
+          </div>
         </div>
 
     </section>
