--- a/views/en/home.html
+++ b/views/en/home.html
@@ -76,7 +76,7 @@
                     <!-- Buttons -->
                     <div class="home-buttons row">
                         <div class="col-lg-3 col-lg-push-3 col-md-4 col-md-push-2 col-sm-6">
-                            <a href="services" data-change-view="true" class="btn btn-block btn-home btn-home-main"><span>View <strong>Services</strong></span><i class="ti-arrow-right"></i></a>
+                            <a href="pricepage" data-change-view="true" class="btn btn-block btn-home btn-home-main"><span>View <strong>Hosting Options</strong>!</span><i class="ti-arrow-right"></i></a>
                         </div>
                         <div class="col-lg-3 col-lg-push-3 col-md-4 col-md-push-2 col-sm-6">
                             <a href="contact" data-change-view="true" class="btn btn-block btn-home btn-link"><span> Contact <strong>Us </strong></span><i class="ti-arrow-right"></i></a>
@@ -87,7 +87,7 @@
                     <ul class="social-media list-inline text-center">
                         <li class="facebook"><a href="https://www.facebook.com/Subely" target="_blank" title="Follow on Facebook"><i class="fa fa-facebook"></i>Follow on <strong>Facebook</strong></a></li>
                         <li class="twitter"><a href="https://twitter.com/Subely_Official " target="_blank" title="Follow on Twitter"><i class="fa fa-twitter"></i>Follow on <strong>Twitter</strong></a></li>
-                        
+
                         <li class="instagram"><a href="https://instagram.com/subelyofficial" tagrget="_blank" title="Follow on Instagram"><i class="fa fa-instagram"></i>Follow on <strong>Instagram</strong></a></li>
                     </ul>
                 </div>
