--- a/views/en/services.html
+++ b/views/en/services.html
@@ -66,9 +66,8 @@
                             <span class="banner2"></span>
                         </span>
                         <div class="service-txt">
-                            <h1><strong>Artificail</strong> Inteligence</h1>
-                            <p class="lead text-muted">Continualy Investigating Threats &amp; Attacks Across the Internet
-                            For the Security of Your Information</p>
+                            <h1>Securing Your Information with <strong>Artificail Inteligence</strong></h1>
+                            <p class="lead text-muted">Continualy Investigating Threats &amp; Attacks Across the Internet</p>
                         </div>
                         <ul class="list-technologies">
                             <!-- <li><span class="photoshop"></span></li>
@@ -98,8 +97,8 @@
                             <span class="key4"></span>
                         </span>
                         <div class="service-txt">
-                            <h1><strong>Fast &amp;</strong> Secure</h1>
-                            <p class="lead text-muted">Eawsy to Use and More Efficient Than FTP.</p>
+                            <h1>Making it <strong>Simple </strong></h1>
+                            <p class="lead text-muted">Our new protocol makes FTP a thing of the past!</p>
                         </div>
                         <!-- <ul class="list-technologies">
                             <li><span class="html5"></span></li>
@@ -130,7 +129,7 @@
                         </span>
                         <div class="service-txt">
                             <h1><strong>Designed</strong> to be Clean</h1>
-                            <p class="lead text-muted">Neat website &amp; app desigs based on current trends.</p>
+                            <p class="lead text-muted">Neat website &amp; panel desigs based on current trends.</p>
                         </div>
                         <ul class="list-technologies">
                             <li><span class="photoshop"></span></li>
