rename portfolio to Hosting Otions and removed signup

--- a/views/en/contact.html
+++ b/views/en/contact.html
@@ -109,7 +109,7 @@
             <div class="popup-wrapper">
                 <div class="contact-popup-content v-center">
                     <a href="tel:+48514219823" class="icon icon-circle icon-lg icon-orange"><i class="fa fa-phone"></i></a></li>
-                    <h4>Gice us a <strong>Ring</strong>!</h4>
+                    <h4>Give us a <strong>Ring</strong>!</h4>
                     <div class="phone-number">
                         <span>+1</span>
                         <span>3</span>
